--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "test-email": "node scripts/test-email.js"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.11.11",
     "next": "15.0.2",
     "nodemailer": "^6.10.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-pdf": "^7.7.1"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
@@ -25,6 +28,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "copy-webpack-plugin": "^13.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8.4.47",
